# attendance_hook

./: README.md  pyproject.toml
attendance_hook/: api.py  hooks.py  modules.txt
attendance_hook/attendance_hook/doctype/tax_childs/: tax_childs.json  tax_childs.py
attendance_hook/attendance_hook/doctype/tax_set_up/: tax_set_up.js  tax_set_up.json  tax_set_up.py  test_tax_set_up.py
attendance_hook/config/: desktop.py  docs.py
